Se realizo el ejercicio 1 usando (do while)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Trabajo Practico N°2 - Bucles</title>
   </head>
   <body>
-    <script src="./js/extra-2.js"></script>
+    <script src="./js/ejercicio1.js"></script>
   </body>
 </html>
